--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "websites_and_content_requirements": {
-      "https://twitter.com": "title",
+      "https://www.postcrossing.com": "title",
       "https://yle.fi": "title",
       "https://www.theverge.com": "title",
       "https://www.facebook.com/login": "title",
