--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "websites_and_content_requirements": {
       "https://www.postcrossing.com": "title",
-      "https://yle.fi": "title",
+      "https://yle.fi": ["title", 1],
       "https://www.theverge.com": "title",
       "https://www.facebook.com/login": "title",
       "https://mvpaderin.com": "title",
